# game-of-life

./: .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  game-of-life.wasm  index.html
.github/workflows/: deploy.yml
src/: cli.rs  field.rs  game_state.rs  gameplay.rs  gameplay_params.rs  main.rs  menu.rs
