[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/artslob/game-of-life"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = "0.3"
egui-macroquad = "0.11"
itertools = "0.10"
strum = { version = "0.24", features = ["derive"] }
